# spice-oss

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
Resources/: Info-Standalone.plist  Spice.rc
Spice.xcodeproj/: project.pbxproj
